--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -18,6 +18,7 @@ bazel_dep(name = "apple_support", version = "1.22.0")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "cxx.rs", version = "1.0.158")
 bazel_dep(name = "googletest", version = "1.17.0")
+bazel_dep(name = "platforms", version = "0.0.11")
 bazel_dep(name = "rules_cc", version = "0.1.1")
 bazel_dep(name = "rules_rust", version = "0.61.0")
 
