--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,11 @@ jobs:
           bazelisk-cache: true
           disk-cache: ${{ matrix.os }}
           repository-cache: true
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@60606e260d2fc5762a71e64e74b2174e8ea3c8bd # ratchet:maxim-lobanov/setup-xcode@v1
+        if: matrix.os == 'macos-14'
+        with:
+          xcode-version: latest-stable
       - name: Build Userspace
         run: bazel build --verbose_failures --sandbox_debug -c opt //...
   unit_tests:
