--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
           repository-cache: true
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@60606e260d2fc5762a71e64e74b2174e8ea3c8bd # ratchet:maxim-lobanov/setup-xcode@v1
+        if: matrix.os == 'macos-13' || matrix.os == 'macos-14' || matrix.os == 'macos-15'
         with:
           xcode-version: latest-stable
       - name: Build Userspace
@@ -42,5 +43,10 @@ jobs:
           bazelisk-cache: true
           disk-cache: ${{ matrix.os }}
           repository-cache: true
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@60606e260d2fc5762a71e64e74b2174e8ea3c8bd # ratchet:maxim-lobanov/setup-xcode@v1
+        if: matrix.os == 'macos-13' || matrix.os == 'macos-14' || matrix.os == 'macos-15'
+        with:
+          xcode-version: latest-stable
       - name: Run All Tests
         run: bazel test --verbose_failures --sandbox_debug --test_output=all //...
