--- a/rednose/BUILD
+++ b/rednose/BUILD
@@ -29,6 +29,10 @@ objc_library(
     name = "macos_logging",
     srcs = ["src/logging/macos_logging.mm"],
     hdrs = ["src/logging/macos_logging.h"],
+    target_compatible_with = select({
+        "@platforms//os:osx": [],
+        "//conditions:default": ["@platforms//:incompatible"],
+    }),
 )
 
 cc_test(
@@ -40,6 +44,12 @@ cc_test(
         "@googletest//:gtest",
         "@googletest//:gtest_main",
     ],
+    linkopts = select({
+        "//conditions:default": [],
+        "@bazel_tools//src/conditions:windows": [
+            "/DEFAULTLIB:ntdll.lib",
+        ],
+    }),
 )
 
 rust_static_library(
@@ -50,9 +60,12 @@ rust_static_library(
     ),
     deps = all_crate_deps(
         normal = True,
-    ) + [
-        ":macos_logging",
-    ],
+    ) + select({
+        "@platforms//os:osx": [
+            ":macos_logging",
+        ],
+        "//conditions:default": [],
+    }),
 )
 
 rust_test(
