--- a/rednose/Cargo.toml
+++ b/rednose/Cargo.toml
@@ -17,7 +17,7 @@ name = "rednose"
 version = "0.1.0"
 edition = "2024"
 description = "Common code for NPS agents"
-rust-version = "1.87.0"
+rust-version = "1.86.0"
 
 [lib]
 name = "rednose"
@@ -25,5 +25,11 @@ path = "src/lib.rs"
 crate-type = ["staticlib"]
 
 [dependencies]
+bytes = "1.10.1"
 cxx = "1.0.158"
+futures = "0.3.31"
 libc = "0.2.172"
+object_store = { version = "0.12.1", features = ["aws", "gcp"] }
+tokio = { version = "1.45.1", default-features = false, features = [
+  "rt",
+] }
