--- a/rednose/Cargo.toml
+++ b/rednose/Cargo.toml
@@ -25,11 +25,6 @@ path = "src/lib.rs"
 crate-type = ["staticlib"]
 
 [dependencies]
-bytes = "1.10.1"
 cxx = "1.0.158"
-futures = "0.3.31"
-libc = "0.2.172"
 object_store = { version = "0.12.1", features = ["aws", "gcp"] }
-tokio = { version = "1.45.1", default-features = false, features = [
-  "rt",
-] }
+tokio = { version = "1.45.1", default-features = false, features = ["rt"] }
