--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-13, macos-14, macos-15, ubuntu-latest]
+        os: [macos-14, macos-15, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # ratchet:actions/checkout@v4
@@ -24,7 +24,7 @@ jobs:
           repository-cache: true
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@60606e260d2fc5762a71e64e74b2174e8ea3c8bd # ratchet:maxim-lobanov/setup-xcode@v1
-        if: matrix.os == 'macos-13' || matrix.os == 'macos-14' || matrix.os == 'macos-15'
+        if: matrix.os == 'macos-14' || matrix.os == 'macos-15'
         with:
           xcode-version: latest-stable
       - name: Build Userspace
@@ -33,7 +33,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-13, macos-14, macos-15, ubuntu-latest]
+        os: [macos-14, macos-15, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # ratchet:actions/checkout@v4
@@ -45,7 +45,7 @@ jobs:
           repository-cache: true
       - name: Setup Xcode
         uses: maxim-lobanov/setup-xcode@60606e260d2fc5762a71e64e74b2174e8ea3c8bd # ratchet:maxim-lobanov/setup-xcode@v1
-        if: matrix.os == 'macos-13' || matrix.os == 'macos-14' || matrix.os == 'macos-15'
+        if: matrix.os == 'macos-14' || matrix.os == 'macos-15'
         with:
           xcode-version: latest-stable
       - name: Run All Tests
