--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,4 @@
 # limitations under the License.
 
 [workspace]
-members = [
-  # The below list must be kept in sync with the crates_repository.manifest
-  # key in the root MODULE.bazel file.
-  "rednose",
-  "rednose/lib/rednose_macro",
-]
+members = ["crates/*"]
