--- a/rednose/Cargo.toml
+++ b/rednose/Cargo.toml
@@ -22,7 +22,7 @@ rust-version = "1.86.0"
 [lib]
 name = "rednose"
 path = "src/lib.rs"
-crate-type = ["staticlib"]
+#crate-type = ["staticlib"]
 
 [dependencies]
 cxx = "1.0.158"
