Rename crate index

--- a/rednose/BUILD
+++ b/rednose/BUILD
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 load("//:rust.bzl", "rust_cxx_bridge")
-load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
+load("@northpolesec_rednose_crate_index//:defs.bzl", "aliases", "all_crate_deps")
 load("@rules_cc//cc:defs.bzl", "objc_library", "cc_test")
 load("@rules_rust//rust:defs.bzl", "rust_static_library", "rust_test")
 
